--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script async="async" data-cfasync="false" src="//pl26136930.effectiveratecpm.com/722939c32656c44f152c92c38661324b/invoke.js"></script>
+<div id="container-722939c32656c44f152c92c38661324b"></div>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
